# relace-mcp

./: .bandit  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  docs.yml  publish.yml  scorecard.yml
benchmark/: __init__.py  analyze.py  cli.py  config.py  experiment_paths.py  metrics.py  mulocbench.py  paths.py  runner.py  schemas.py  swe_bench.py
benchmark/_config/: __init__.py  paths.py  settings.py
benchmark/analysis/: __init__.py  ast_spans.py  blacklist.py  bundle.py  call_graph.py  case_map_compare.py  compare.py  function_scope.py  journey_graph.py  metrics.py  path_metrics.py  range_metrics.py  search_map.py  search_map_bundle.py  trace_analyzer.py  trace_artifacts.py  traces.py  treesitter.py
benchmark/cli/: __init__.py  __main__.py  analyze.py  audit_elite.py  build_locbench.py  case_map.py  curate.py  curate_elite.py  filter.py  grid.py  migrate.py  report.py  run.py  trace.py  validate.py  web.py
benchmark/config/: paths.py
benchmark/datasets/: __init__.py  filtered.py  loader.py  mulocbench.py
benchmark/domain/: __init__.py  checkpoint.py  experiment.py
benchmark/evaluation/: __init__.py  metrics.py  paths.py
benchmark/experiments/: __init__.py  index.py  layout.py  metadata.py  migrate.py  models.py  runner.py  store.py  trace_recorder.py
benchmark/filters/: __init__.py  blacklist.py  query_type.py  relevance.py  solvability.py
benchmark/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
benchmark/infrastructure/: __init__.py  cache.py
benchmark/metrics/: __init__.py  paths.py  ranges.py
benchmark/run/: __init__.py  metadata.py  models.py  progress.py  runner.py
benchmark/runner/: __init__.py  executor.py  experiment_paths.py  git.py  metadata.py  preflight.py  results.py  trace_recorder.py
benchmark/services/: __init__.py  experiment_service.py
benchmark/tests/: conftest.py  test_ast_normalizer.py  test_benchmark_docs.py  test_call_graph.py  test_experiment_paths.py  test_grid_cli.py  test_joint_metrics.py  test_locbench_build.py  test_preflight.py  test_query_classifier.py  test_ranges.py  test_report_cli.py  test_search_map.py  test_target_ranges.py  test_trace_artifact_helpers.py  test_trace_artifacts.py  test_trace_cli.py  test_trace_metadata.py  test_trace_recorder.py  test_treesitter.py
benchmark/viewer/: discovery.py  server.py
benchmark/web/: api.py  discovery.py  server.py
docs/: advanced.md  advanced.zh-CN.md  benchmark.md  benchmark.zh-CN.md  dashboard.md  dashboard.zh-CN.md  index.md  index.zh.md  locagent_fast_search_dataset_report.md  testing-audit.md  tools.md  tools.zh-CN.md
docs/advanced/: benchmark.md  benchmark.zh.md  dashboard.md  dashboard.zh.md  environment-variables.md  environment-variables.zh.md  index.md  index.zh.md  logging.md  logging.zh.md  overview.md  overview.zh.md
docs/benchmark/: overview.md  overview.zh.md
docs/configuration/: chunkhound.md  chunkhound.zh.md  codanna.md  codanna.zh.md  overview.md  overview.zh.md
docs/contributing/: development.md  development.zh.md  index.md  index.zh.md  overview.md  testing.md  testing.zh.md
docs/getting-started/: configuration.md  configuration.zh.md  installation.md  installation.zh.md  quick-start.md  quick-start.zh.md
docs/javascripts/: extra.js
docs/overrides/: main.html
docs/setup/: configuration.md  configuration.zh.md  environment-variables.md  environment-variables.zh.md  installation.md  installation.zh.md
docs/stylesheets/: extra.css
docs/tools/: agentic-search.md  agentic-search.zh.md  cloud-search.md  cloud-search.zh.md  fast-apply.md  fast-apply.zh.md  index.md  index.zh.md  overview.md  overview.zh.md  reference.md  reference.zh.md
notes/: refactoring-analysis.md
scripts/: clone-dev-tree.sh
src/relace_dashboard/: app.py  log_reader.py  widgets.py
src/relace_mcp/: __init__.py  background_index_monitor.py  config.py  relace_client.py  server.py  tools.py  utils.py
tests/: conftest.py  test_apply.py  test_apply_client.py  test_ast_normalizer.py  test_base_dir.py  test_call_graph.py  test_config.py  test_joint_metrics.py  test_lsp_handler.py  test_lsp_module.py  test_middleware_roots.py  test_query_classifier.py  test_relace_client.py  test_repo_client.py  test_repo_list_info.py  test_repo_sync.py  test_search_agent.py  test_search_client.py  test_search_handlers.py  test_search_harness.py  test_search_security.py  test_server.py  test_tools.py  test_utils.py
tests/apply/: test_apply_client_unit.py  test_apply_core_unit.py  test_apply_unit.py
tests/config/: test_base_dir_unit.py  test_bootstrap_unit.py  test_config_unit.py  test_reload_settings_unit.py
tests/contract/: test_health_indicators.py  test_mcp_compliance.py
tests/dashboard/: test_log_reader_unit.py
tests/docs/: test_user_docs_unit.py
tests/encoding/: test_encoding_unit.py
tests/entrypoints/: test_python_entrypoints_unit.py
tests/integration/: test_agentic_retrieval_integration.py  test_cloud_operations.py  test_dotenv_tool_registration.py  test_lsp_handler.py  test_lsp_module.py  test_lsp_search_symbol.py  test_middleware_tracing.py  test_search_commands.py  test_server.py
tests/lsp/: test_handler_integration.py  test_languages_unit.py  test_logging_unit.py  test_multi_language_unit.py  test_search_symbol_integration.py  test_transport_runtime_unit.py
tests/mcp/: test_mcp_compliance_contract.py
tests/observability/: test_trace_logging_unit.py
tests/repo/: test_client_unit.py
tests/retrieval/: test_agentic_retrieval_integration.py  test_agentic_retrieval_unit.py  test_background_index_monitor_unit.py  test_codanna_unit.py  test_freshness_unit.py  test_index_state_unit.py  test_index_status_probe_unit.py
tests/search/: test_client_unit.py  test_commands_integration.py  test_handlers_unit.py  test_harness_messages_unit.py  test_harness_unit.py  (+4 more)
(+366 files in other folders)
