[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relace-mcp"
version = "0.2.5a4"
description = "Unofficial Relace MCP Server - Fast code merging via Relace API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "possible055" }]
requires-python = ">=3.11"
keywords = ["relace", "instant-apply", "model-context-protocol", "mcp-server"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: FastAPI",
  "Environment :: Plugins",
]
dependencies = [
  "charset-normalizer>=3.0.0",
  "fastmcp>=3.0.0,<4",
  "httpx>=0.28.0",
  "openai>=1.0.0",
  "pathspec>=0.12.0",
  "pydantic>=2.0.0,<3",
  "platformdirs>=4.0.0",
  "psutil>=5.9.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "tenacity>=8.0.0",
]

[project.urls]
Repository = "https://github.com/possible055/relace-mcp"
Documentation = "https://github.com/possible055/relace-mcp#readme"
Issues = "https://github.com/possible055/relace-mcp/issues"

[project.scripts]
# Define primary CLI entrypoints
relace-mcp = "relace_mcp.server:main"
relogs = "relace_dashboard:main"

[project.optional-dependencies]
pyright = ["basedpyright>=1.20.0"]
# Removed 'ty' and 'interrogate' to reduce tooling bloat (KISS)
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.5.1",
  "mypy>=1.19.1",
  "dead>=1.5.2",
  "ruff>=0.1.0",
  "build>=1.0.0",
  "types-PyYAML>=6.0.0",
  "bandit[toml]>=1.9.0",
]
tools = ["textual>=0.50.0"]
otel = [
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp>=1.20.0",
]
benchmark = [
  "click>=8.0.0",
  "rich>=13.0.0",
  "tree-sitter>=0.24.0",
  "tree-sitter-python>=0.24.0",
]
"benchmark-web" = [
  "fastapi>=0.115.0,<1",
  "uvicorn>=0.32.0,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Include non-Python assets during build
relace_mcp = ["**/*.yaml"]
relace_dashboard = ["*.tcss"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["relace_mcp*", "relace_dashboard*"]
exclude = ["tests*"]

[tool.bandit]
# Skip specific paths during security scans
exclude_dirs = [
  "tests",
  "benchmark/.data",
  ".bench-repos",
  ".venv",
  "*/test_*.py",
  "*/*_test.py",
]

[tool.bandit.assert_used]
# Allow assertions in testing environments
skips = ["*/test_*.py", "*/*_test.py"]

[tool.mypy]
# Enforce strict type checking as the primary analyzer
strict = true
python_version = "3.11"
# Relax constraints on untyped dependencies to prevent repetitive casting
disallow_untyped_calls = false
# Globally suppress missing import errors for un-stubbed packages
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Combine overrides that require following untyped imports
module = ["psutil", "textual.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
# Suppress specific edge-case errors in UI module
module = ["relace_dashboard.*"]
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Auto-manage async execution loops
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Enforce explicitly registered test markers to prevent typos
addopts = "--strict-markers --import-mode=importlib"
markers = [
  "unit: unit-level product tests",
  "integration: integration-level product tests",
  "contract: contract-level product tests",
  "smoke: smoke-level product tests",
]
